Add support for Java 11+
Done this way so as to allow more people to use esson